test/classes/errors/nilability-assign/assign-nonnil-unmanaged-from-oknil-owned.good
assign-nonnil-unmanaged-from-oknil-owned.chpl:8: error: Cannot assign to unmanaged MyClass from owned MyClass?
